--- a/base/css/is.css
+++ b/base/css/is.css
@@ -1159,9 +1159,10 @@
 .crossroads-flow-container .filter-grouop .date-group input {
   height: 3rem;
 }
-.main-stats-container .filter-grouop .ui.primary-chkbox.md label,
-.stats-container .filter-grouop .ui.primary-chkbox.md label,
-.crossroads-flow-container .filter-grouop .ui.primary-chkbox.md label {
+.main-stats-container .filter-grouop .ui.primary-chkbox label,
+.stats-container .filter-grouop .ui.primary-chkbox label,
+.crossroads-flow-container .filter-grouop .ui.primary-chkbox label {
+  padding-left: 2.3rem;
   font-size: 1.6rem;
 }
 .main-stats-container .filter-grouop .btn-data-search,
